--- a/messenger-api/package.json
+++ b/messenger-api/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.22.1",
-    "ts-node": "^9.1.1"
-    
+    "prisma": "^2.22.1"
   },
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "@types/node": "^15.12.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.3"
   }
 }
