--- a/messenger-api/package.json
+++ b/messenger-api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Messenger - chat application for connecting people.",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start:dev": "ts-node-dev --respawn -- src/index.ts",
     "seed": "prisma db seed --preview-feature",
     "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.22.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "prisma": "^2.22.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.3"
   }
 }
