--- a/messenger-api/package.json
+++ b/messenger-api/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.26.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "prisma": "^2.26.0",
