--- a/messenger-app/package.json
+++ b/messenger-app/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "isomorphic-unfetch": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
+    "swr": "^0.5.6",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
